# ai-review-equilibrium-gemini

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  download_datasets.py  extract_papers.py  literature_review.md  papers_summary.txt  planning.md  pyproject.toml  resources.md  run_all.sh
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_gemini_transcript.jsonl  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: debate_analysis.txt  experiment_results.csv  experiment_results_partial.json  final_summary.json  improvement_experiment.json  metrics.json
results/calibrated/: calibrated_results.csv  calibrated_results.json
results/comparison/: comparison_data.csv
src/: aggregate_metrics.py  analysis.py  analyze_calibrated_correlation.py  analyze_cost.py  analyze_debate.py  analyze_diversity.py  compare_sota.py  experiment.py  experiment_calibrated.py  experiment_improvement.py  plot_calibration.py  plot_master_summary.py  reviewer.py  utils.py
tests/: test_reviewer.py  test_utils.py
